--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<title>Shared Cursors</title>
 		<link rel="stylesheet" href="main.css">
 		<script src="jquery.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
