Made it look better, added functionality of names and messages

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
 		<script src="main.js"></script>
 	</head>
 	<body>
-		<div id="body"></div>
+		<div id="counter">
+            <p class="counter-text">Currently</p>
+            <p id="counter-number">0</p>
+            <p class="counter-text">connected</p>
+        </div>
+        <div id="input-container">
+            <input id="input-box" placeholder="Name">
+        </div>
 	</body>
 </html>
